// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse config ensure parsing integrity overwrite:false 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../cgp-template-default",
  "templateName": "default",
}
`;

exports[`parse config ensure parsing integrity overwrite:false/template:react 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../cgp-template-react",
  "templateName": "react",
}
`;

exports[`parse config ensure parsing integrity overwrite:false/template:react-ts 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../cgp-template-react-ts",
  "templateName": "react-ts",
}
`;

exports[`parse config ensure parsing integrity overwrite:false/template:typescript 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../cgp-template-typescript",
  "templateName": "typescript",
}
`;

exports[`parse config ensure parsing integrity overwrite:true 1`] = `
Object {
  "overwrite": true,
  "targetDir": "",
  "templateDir": "../../cgp-template-default",
  "templateName": "default",
}
`;

exports[`parse config ensure parsing integrity overwrite:true/template:react 1`] = `
Object {
  "overwrite": true,
  "targetDir": "",
  "templateDir": "../../cgp-template-react",
  "templateName": "react",
}
`;

exports[`parse config ensure parsing integrity overwrite:true/template:react-ts 1`] = `
Object {
  "overwrite": true,
  "targetDir": "",
  "templateDir": "../../cgp-template-react-ts",
  "templateName": "react-ts",
}
`;

exports[`parse config ensure parsing integrity overwrite:true/template:typescript 1`] = `
Object {
  "overwrite": true,
  "targetDir": "",
  "templateDir": "../../cgp-template-typescript",
  "templateName": "typescript",
}
`;

exports[`parse config ensure parsing integrity template:react 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../cgp-template-react",
  "templateName": "react",
}
`;

exports[`parse config ensure parsing integrity template:react-ts 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../cgp-template-react-ts",
  "templateName": "react-ts",
}
`;

exports[`parse config ensure parsing integrity template:typescript 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../cgp-template-typescript",
  "templateName": "typescript",
}
`;

exports[`parse config ensure parsing integrity vanilla 1`] = `
Object {
  "overwrite": false,
  "targetDir": "",
  "templateDir": "../../cgp-template-default",
  "templateName": "default",
}
`;
